--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@polymer/lit-element": "^0.7.1",
-    "assets": "^3.0.1"
+    "assets": "^3.0.1",
+    "intersection-observer": "^0.11.0"
   }
 }
