--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "parcel src/index.html",
-    "prod": "parcel build src/index.html"
+    "build": "parcel build src/index.html",
+    "postbuild": "workbox generateSW",
+    "prod": "http-server dist -p 1235 --host=0.0.0.0"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +16,8 @@
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
     "sass": "^1.26.3",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "workbox-cli": "^5.1.3"
   },
   "dependencies": {
     "@polymer/lit-element": "^0.7.1",
